--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
   </head>
   <body>
     <ul class="gallery"></ul>
-    <!-- <ul>
-      <li><a href="task-01.html">Task 1</a></li>
-      <li><a href="task-02.html">Task 2</a></li>
-      <li><a href="task-03.html">Task 3</a></li>
-      <li><a href="task-04.html">Task 4</a></li>
-      <li><a href="task-05.html">Task 5</a></li>
-      <li><a href="task-06.html">Task 6</a></li>
-    </ul> -->
-    <script src="js/task.js" type="module"></script>
+
+    <!-- <script src="js/task.js" type="module"></script> -->
+    <script src="js/task-01.js" type="module"></script>
   </body>
 </html>
