--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       async
     ></script>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
