--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       src=" https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js "
       async
     ></script>
-    <!-- <script src="js/main.js" type="module"></script> -->
-    <!-- <script src="./js/main.js" type="module"></script> -->
-    <script src="/js/main.js" type="module"></script>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
