add main2 script

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       async
     ></script>
 
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/main.js"></script> -->
+    <script src="./js/main2.js"></script>
   </body>
 </html>
