--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       async
     ></script>
 
-    <!-- <script src="./js/main.js"></script> -->
-    <script src="./js/main2.js"></script>
+    <script src="./js/gallery.js"></script>
+    <!-- <script src="./js/gallery2.js"></script> -->
   </body>
 </html>
